# MediBioticsAI

./: .env  .gitignore  .pylintrc  CHAGENLOG.md  README.md  justfile  pyproject.toml
.github/workflows/: pull_request_workflow.yml
configuration/: config.yaml
notebooks/healthcare_classification/: healthcare_dataset_eda.ipynb
scripts/: check_working_directory  check_working_directory.sh  create_elasticsearch_user.sh  setup_elasticsearch.sh
src/general_utils/: general_utils.py
src/logging_module/: logging_module.py
src/tests/: test_general_utils.py  test_logging_module.py
tests/: test_general_utils.py  test_logging_module.py
