[tool.poetry]
name = "medibioticsai"
version = "0.1.2"
description = "MediBioticsAI is a cutting-edge initiative at the forefront of the healthcare revolution, harnessing the power of AI&ML to address some of the most pressing challenges in the field of health and medicine."
authors = ["Simone Porreca <porrecasimone@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"
pylint-pytest = "^1.1.3"


[tool.poetry.group.dev.dependencies]
pandas = "^2.1.0"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
jupyterlab = "^4.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
